# interoptopus_custom_c_backend

./: .gitignore  Cargo.toml
reference_project/: Cargo.toml
src/: config.rs  converter.rs  writer.rs
tests/: backend_c_ui.rs
tests/output_docs_inline/: my_header.h.expected
tests/output_nodocs/: my_header.h.expected
tests/output_typedefs/: my_header.h.expected
